# templatedXML

./: CMakeLists.txt  README.md  TXmlConfig.cmake.in  TXmlConfigVersion.cmake.in  TemplatedXMLConfig.cmake.in
.github/workflows/: cmake-multi-platform.yml
applications/fb2/: BookTitle.h  BookTitle.hpp  Description.h  Description.hpp  DocumentInfo.h  DocumentInfo.hpp  (+10 more)
cmake/: FindJSON.cmake  FindLibXML2.cmake  FindLibXMLPP.cmake  download_android_libxml2.cmake.in  download_json.cmake.in  download_libxml++.cmake.in  download_libxml2.cmake.in
examples/: CMakeLists.txt  main.cpp
examples/fb2/: CMakeLists.txt  main.cpp
examples/fb2_deserialize/: CMakeLists.txt  main.cpp  xml_deserializer.hpp
examples/fb2_deserialize_json/: CMakeLists.txt  json_deserializer.hpp  json_deserializer_injection.hpp  main.cpp
examples/fb2_deserialize_json/cmake/: FindJSON.cmake  download_json.cmake.in
examples/fb2_to_json/: CMakeLists.txt  fb2_to_json.hpp  fb2_to_json_serializer_injection.hpp  json_to_fb2.hpp  main.cpp
examples/fb2_to_schema/: CMakeLists.txt  fb2_to_custom_schema.hpp  fb2_to_json_schema.hpp  fb2_to_json_schema_injection.hpp  fb2_to_json_schema_repack.hpp  fb2_to_schema.hpp  main.cpp
examples/utils/: CMakeLists.txt  main.cpp
examples/xdxf/: CMakeLists.txt  main.cpp
examples/xdxf_to_fb2/: CMakeLists.txt  main.cpp
examples/xdxf_to_schema/: CMakeLists.txt  main.cpp  xdxf_to_schema.hpp
include/: XDXFCreatable.h  XMLArrayContainerNode.h  XMLArrayContainerNode.hpp  XMLCreator.h  XMLCreator.hpp  XMLNode.h  XMLNode.hpp  XMLNodeLeaf.h  XMLNodeLeaf.hpp  XMLProducible.h  XMLProducible.hpp  XMLPublishing.h  XMLPublishing.hpp  utils.h
txml/: CMakeLists.txt  XDXFCreatable.h  XMLArrayContainerNode.h  XMLArrayContainerNode.hpp  XMLCreator.h  XMLCreator.hpp  XMLNode.h  XMLNode.hpp  XMLNodeLeaf.h  XMLNodeLeaf.hpp  XMLProducible.h  XMLProducible.hpp  XMLSerializable.h  XMLSerializable.hpp  txml.hpp  txml_fwd.h  utils.h
txml/applications/fb2/: BookTitle.h  BookTitle.hpp  Description.h  Description.hpp  DocumentInfo.h  DocumentInfo.hpp  Empty.h  Empty.hpp  FB2TextElement.h  FB2TextElement.hpp  FictionBook.h  FictionBook.hpp  PublishInfo.h  PublishInfo.hpp  TitleInfo.h  TitleInfo.hpp  fb2.hpp  fb2_fwd.h
txml/applications/fb2/auxiliary/: Binary.h  Binary.hpp  fb2_aux.hpp  fb2_aux_fwd.h
txml/applications/fb2/auxiliary/include/: Binary.hpp
txml/applications/fb2/auxiliary/include/fwd/: Binary.h
txml/applications/fb2/body/: Body.h  Body.hpp  Section.h  Section.hpp  fb2_body.hpp  fb2_body_fwd.h
txml/applications/fb2/body/include/: Body.hpp  Section.hpp
txml/applications/fb2/body/include/fwd/: Body.h  Section.h
txml/applications/fb2/common/: Paragraph.h  Paragraph.hpp  fb2_common.hpp  fb2_common_fwd.h
txml/applications/fb2/common/include/: Paragraph.hpp
txml/applications/fb2/common/include/fwd/: Paragraph.h
txml/applications/fb2/include/: Author.hpp  BookTitle.hpp  Description.hpp  DocumentInfo.hpp  Empty.hpp  FB2TextElement.hpp  FictionBook.hpp  FirstName.hpp  Genre.hpp  ISBN.hpp  Language.hpp  LastName.hpp  MiddleName.hpp  NickName.hpp  PublishInfo.hpp  Publisher.hpp  TitleInfo.hpp
txml/applications/fb2/include/fwd/: Author.h  BookTitle.h  Description.h  DocumentInfo.h  Empty.h  FB2TextElement.h  FictionBook.h  FirstName.h  Genre.h  ISBN.h  Language.h  LastName.h  MiddleName.h  NickName.h  PublishInfo.h  Publisher.h  TitleInfo.h
txml/applications/json/: json.hpp  json_fwd.h
txml/applications/json/include/: Deserializer.hpp  DeserializerCore.hpp  IOCore.hpp  SchemaSerializer.hpp  Serializer.hpp  SerializerCore.hpp  utils.hpp
txml/applications/json/include/fwd/: Deserializer.h  DeserializerCore.h  IOCore.h  SchemaSerializer.h  Serializer.h  SerializerCore.h
txml/applications/xdxf/: Comment.h  Comment.hpp  KeyPhrase.h  KeyPhrase.hpp  TextElement.h  TextElement.hpp  Transcription.h  Transcription.hpp  XDXFArticle.h  XDXFArticle.hpp  xdxf.hpp  xdxf_fwd.h
txml/applications/xdxf/include/: Comment.hpp  KeyPhrase.hpp  TextElement.hpp  Transcription.hpp  XDXFArticle.hpp
txml/applications/xdxf/include/fwd/: Comment.h  KeyPhrase.h  TextElement.h  Transcription.h  XDXFArticle.h
txml/applications/xdxf/serializer/: to_fb2.hpp
txml/applications/xml/: xml.hpp  xml_fwd.h
txml/applications/xml/include/: Deserializer.hpp  DeserializerCore.hpp
txml/applications/xml/include/fwd/: Deserializer.h  DeserializerCore.h
txml/details/: GenericCommandArguments.hpp
txml/engine/: TextReaderWrap.hpp
txml/include/: GenericCreator.hpp  XDXFCreatable.h  XMLArray.hpp  XMLArrayContainerNode.h  XMLArrayContainerNode.hpp  XMLCreator.h  XMLCreator.hpp  XMLDeserializable.hpp  XMLNode.h  XMLNode.hpp  XMLNodeLeaf.h  XMLNodeLeaf.hpp  XMLNodeLeafNoData.hpp  XMLProducible.h  XMLProducible.hpp  XMLPublishing.h  XMLPublishing.hpp  XMLSerializable.h  XMLSerializable.hpp  utils.h
txml/include/details/: GenericCommandArguments.h  GenericCommandArguments.hpp  GenericContainerImpl.hpp  SerializePolicies.hpp  TracerPolicies.hpp
txml/include/details/fwd/: GenericContainerImpl.h  Searchable.h  SerializePolicies.h  TracerPolicies.h
txml/include/engine/: FormatDeserializerBase.hpp  FormatSerializerBase.hpp  SchemaSerializerBase.hpp  TextReaderWrap.hpp  TracerHelper.hpp
txml/include/engine/fwd/: DeserializerDispatcher.h  Dispatcher.h  DispatcherBase.h  FormatDeserializerBase.h  FormatSerializerBase.h  Helpers.h  SchemaSerializerBase.h  SerializerDispatcher.h  SerializerSchemaDispatcher.h  TagHolder.h  TextReaderWrap.h  TracerHelper.h
txml/include/fwd/: GenericCreator.h  ParamsPacking.h  XDXFCreatable.h  XMLArray.h  XMLArrayContainerNode.h  XMLCreator.h  XMLDeserializable.h  XMLNode.h  XMLNodeLeaf.h  XMLNodeLeafNoData.h  XMLProducible.h  XMLSerializable.h
txml/include/utils/: SchemaSerializer.hpp  Serializer.hpp  Tracer.hpp
txml/include/utils/fwd/: Tracer.h  utils.h
txml/include/utils/fwd/specific_tracer/: EmptyTracer.h  SStreamTracer.h  StdOutTracer.h
txml/include/utils/specific_tracer/: EmptyTracer.hpp  SStreamTracer.hpp  StdOutTracer.hpp
txml/utils/: Serializer.hpp  Tracer.hpp
(+21 files in other folders)
